--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,9 @@
 		"streambuf": "cpp",
 		"text_encoding": "cpp",
 		"typeinfo": "cpp",
-		"variant": "cpp"
+		"variant": "cpp",
+		"unordered_set": "cpp",
+		"iostream": "cpp",
+		"istream": "cpp"
 	}
 }
